--- a/CryptTool/CryptTool.csproj
+++ b/CryptTool/CryptTool.csproj
@@ -34,28 +34,42 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="frmAbout.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmAbout.Designer.cs">
-		<DependentUpon>frmAbout.cs</DependentUpon>
-	</Compile>
+      <DependentUpon>frmAbout.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAES.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAES.Designer.cs">
+      <DependentUpon>frmAES.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmKeyView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmKeyView.Designer.cs">
-		<DependentUpon>frmKeyView.cs</DependentUpon>
-	</Compile>
+      <DependentUpon>frmKeyView.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmMain.Designer.cs" >
-		<DependentUpon>frmMain.cs</DependentUpon>
-	</Compile>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmRSA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRSA.Designer.cs">
+      <DependentUpon>frmRSA.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="RSACryptoHelper.cs" />
     <Compile Include="Properties\Resources.cs" />
@@ -64,6 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmAbout.resx" />
+    <EmbeddedResource Include="frmAES.resx">
+      <DependentUpon>frmAES.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmKeyView.resx" />
     <EmbeddedResource Include="frmMain.resx" />
     <EmbeddedResource Include="Properties\Resources.resx" />
