--- a/CryptoTool.Core/CryptoTool.Core.csproj
+++ b/CryptoTool.Core/CryptoTool.Core.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net60;net70;net80;net90</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>Yuki.Crypto.Core</PackageId>
-    <Version>1.0.1.3</Version>
+    <Version>1.1.0</Version>
     <Authors>yuki_takeya</Authors>
     <Company>Yuki Software</Company>
     <Copyright>https://github.com/YukiKurosawaDev/CryptTool/blob/master/LICENSE</Copyright>
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
+    <PackageReference Include="BouncyCastle.Cryptography" Version="2.3.1" />
   </ItemGroup>
 
 </Project>
